[package]
name = "code-status"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Recursive git repo status checker"
repository = "https://github.com/WilliamMoolman/code-status"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "filesystem"]
keywords = ["git", "status"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
git2 = "0.18.1"
pathdiff = "0.2.1"
slab_tree = "0.3.2"

